2.0.4 - Bugfixe in ACF en dossier check; contrastkleuren verder verbeterd.

--- a/less/20-elements.less
+++ b/less/20-elements.less
@@ -8,8 +8,8 @@
 // * @author  Paul van Buuren
 // * @license GPL-2.0+
 // * @package wp-rijkshuisstijl
-// * @version 2.0.3
-// * @desc.   Bugfixes; contrastkleuren in widget en reactieform verbeterd.
+// * @version 2.0.4
+// * @desc.   Bugfixe in ACF en dossier check; contrastkleuren verder verbeterd.
 // * @link    https://github.com/ICTU/digitale-overheid-wordpress-theme-rijkshuisstijl
 // **
 
@@ -649,4 +649,21 @@
       }
     }
   }
+
+
+  /*
+  Timeline plugin
+  -------------------------------------------------------------------------------------------------- */
+  .timeline-main {
+    background-color: @grijs_1;
+    .timelineToggle {
+      color: @donkerblauw_vol;
+    }    
+    a {
+      &:hover {
+        color: @txt;
+      }
+    }
+  }
+
 }
